--- a/web/templates/exp02.html
+++ b/web/templates/exp02.html
@@ -262,7 +262,7 @@
 
             <div class="button-area">
                     <a href="/page03/">
-                        <el-button type="primary"  @click="next">下一步</el-button>
+                        <el-button type="warning" @click="next">下一步</el-button>
                     </a>
                 </div>
     
