--- a/web/templates/exp05.html
+++ b/web/templates/exp05.html
@@ -330,7 +330,7 @@
                                     </div>
                                 </el-col>
                                 <el-col :span="8">
-                                        <el-button v-if="isShow" type="primary"  @click="goNext">继续</el-button>
+                                        <el-button v-if="isShow" type="warning"  @click="goNext">继续</el-button>
                                 </el-col>
                             </el-row>
                         </div>
