--- a/web/templates/exp06.html
+++ b/web/templates/exp06.html
@@ -113,7 +113,10 @@
                 </div>
 
                 <div class="button-area">
-                    <el-button type="primary"  @click="exit">结束</el-button>  
+                    <a href="/">
+                        <el-button type="warning"  @click="exit">结束</el-button>
+                    </a>
+
                 </div>
 
 
