--- a/web/templates/exp01.html
+++ b/web/templates/exp01.html
@@ -161,7 +161,7 @@
                          <!-- 实验入口 -->
                  <div class="button-area">
                     <a href="/page02/">
-                        <el-button type="primary"  @click="start">下一步</el-button>
+                        <el-button type="warning"  @click="start">下一步</el-button>
                     </a>
                 </div>
             </div>
