--- a/web/templates/exp03.html
+++ b/web/templates/exp03.html
@@ -92,7 +92,7 @@
 
             <div class="button-area">
 
-                <el-button type="primary"  @click="onSubmit">下一步</el-button>
+                <el-button type="warning" @click="onSubmit">下一步</el-button>
 
             </div>
     
